test(jni): run tiny native library with upcall fixture