@@ -1,3 +1,9 @@
+import org.gradle.api.tasks.testing.Test
+
 dependencies {
     implementation(project(":jvm-runtime"))
+}
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
